--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %}</title>
+    <title>HPP | {% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <style>
+      .font {
+        font-weight: bolder;
+        font-family: 'Raleway', sans-serif;
+      }
       .container-center {
         height: 200px;
         position: relative;
@@ -30,19 +37,96 @@
       }
 
       .demo {
-        border: 1px solid black;
         width: 400px;
-        margin-top: 155px;
+        margin-top: 150px;
         margin-left: 150px;
         border-radius: 15px;
-        padding: 0px 10px;
+        padding: 10px;
+        padding-bottom: 1px;
+        background-color: black;
+        color: white;
+        opacity: 50%;
+        text-align: center;
+      }
+
+      {% comment %} CSS for predict page {% endcomment %}
+      .body {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+        background-color: #050f2c;
+        font-family: "Inter", sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+  
+      .body::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(#3EDBF0,#04009A);
+        clip-path: circle(52% at 77% 93%);
+      }
+  
+      .body::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(#77ACF1, #77ACF1);
+        clip-path: circle(20% at 10% 90%);
+      }
+  
+      .predict-container {
+        position: relative;
+        max-width: 1200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        z-index: 1;
+      }
+  
+      .predict-card {
+        width: 300px;
+        height: 380px;
+        position: relative;
+        margin: 110px auto;
+        background: radial-gradient(
+          140% 140% at 0% 0%,
+          rgba(255, 255, 255, 0.4) 0%,
+          rgba(255, 255, 255, 0) 100%
+        );
+        border-top: 1px solid #eeeded70;
+        border-left: 1px solid #eeeded70;
+        border-radius: 50px;
+        box-shadow: inset -5px -5px 250px rgba(255, 255, 255, 0.02);
+        backdrop-filter: blur(30px);
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+      }
+  
+      .card-header{
+        padding-top: 10px;
+        padding-bottom: 0px;
+        padding-right: 0px;
+        padding-left: 0px;
+        border-bottom-width: 0px;
+        margin-top: 30px;
       }
     </style>
   </head>
-<body>
+  <body class="bg-primary-subtle">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Everything About ML</a>
+          <a class="navbar-brand" href="#">Real Estate HPP</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,16 +135,27 @@
               <li class="nav-item mx-3">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              <li class="nav-item mx-3">
+              {% comment %} <li class="nav-item mx-3">
                 <a class="nav-link" href="/about">About Us</a>
-              </li>
+              </li> {% endcomment %}
               <li class="nav-item mx-3">
                 <a class="nav-link" href="/contact">Contact Us</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="/predict">Predict Price</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
+            <strong>{{ message.tags|capfirst }}! </strong>{{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
       {% block body %}{% endblock body %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
